--- a/style.css
+++ b/style.css
@@ -527,6 +527,10 @@ header{
     .home .content p{
       font-size: 2.0rem;
     }
+
+    .heading .content p {
+      font-size: 1.6rem;
+    }
 }
 
 
