--- a/style.css
+++ b/style.css
@@ -480,6 +480,7 @@ header{
   section {
     padding: 2rem;
   }
+
 }
 
 
@@ -524,12 +525,8 @@ header{
       font-size: 4.5rem;
     }
     
-    .home .content p{
+    .row .content p{
       font-size: 2.0rem;
-    }
-
-    .heading .content p {
-      font-size: 1.6rem;
     }
 }
 
